# Cpresslink

./: .gitignore  LICENSE  README.md  index.html
assets/: index-Bt_y5QZV.js  index-C-BdVRaj.js  index-C4N9mSFe.js  index-Cdo2kP_s.js  index-D2slTDFN.css  index-D7wgXaWk.css  index-I5sWNfjM.css  index-qtxA-NHh.css
backend/: Cargo.toml  Dockerfile  later.txt  request.http
backend/migrations/: 20260415180110_init.sql
backend/src/: db.rs  error.rs  handlers.rs  main.rs  models.rs  queue.rs  services.rs  utils.rs  workers.rs
backend/src/config/: state.rs
backend/src/db/: cache.rs  respository.rs
backend/src/db/cache/: clicks.rs  link.rs
backend/src/db/respository/: analytics.rs  github_oauth.rs  google_oauth.rs  links.rs  user.rs
backend/src/handlers/: auth.rs  link.rs  redirect.rs
backend/src/middleware/: auth.rs
backend/src/models/: auth.rs  events.rs  links.rs  redirect.rs
backend/src/queue/: consumer.rs  producer.rs
backend/src/services/: analytics_service.rs  auth_service.rs  link_service.rs  redirect_service.rs
backend/src/utils/: email.rs  email_templates.rs  env_registry.rs  geo.rs  id.rs  jwt.rs  logger.rs  response.rs  user_agent.rs
backend/src/workers/: click.rs  device.rs  geo.rs  notification.rs
files (2)/: Cargo.toml  auth.rs  main.rs  mod.rs  user.rs
files (2)/mnt/user-data/outputs/axum-utoipa/src/models/: user.rs
frontend/: .gitignore  index.html  package-lock.json  package.json  plan.excalidraw  vite.config.ts
frontend/src/: App.vue  countLine.ps1  main.ts  types.ts  utils.ts
frontend/src/assets/: main.css
frontend/src/components/: Card.vue  ClickOverTimeCard.vue  DateRangeNavbar.vue  FeatureCard.vue  FeatureSection.vue  Footer.vue  Header.vue  InputField.vue  LineBar.vue  LinksSidebar.vue  SettingSidebarTab.vue  StepItem.vue  Switch.vue  WeekTrafficBarChart.vue  WorkingStepSection.vue
frontend/src/features/analytics/components/: ClickOverTimeCard.vue  DateRangeNavbar.vue  DeviceBreakdown.vue  GeographicalReach.vue  LinkDetails.vue  LinksAnalyticsRow.vue  LinksSidebar.vue  TopReferrers.vue
frontend/src/features/dashboard/components/: AllLinks.vue  ClicksDetailsRow.vue  CreateLink.vue  LinkTools.vue  NetworkTraffic.vue  TopPerformers.vue
frontend/src/features/settings/api_integrations/: ApiKeys.vue  ConnectedIntegrations.vue
frontend/src/features/settings/billingPlan/components/: CancelSubscription.vue  CurrentPlan.vue  Invoices.vue  Subscriptions.vue  Usage.vue  Usagebar.vue
frontend/src/features/settings/components/: SettingHeading.vue
frontend/src/features/settings/preferences/components/: Display.vue  EmailAlert.vue  LinkBehaviour.vue
frontend/src/features/settings/profile/components/: AccountActions.vue  AvatarCard.vue  DomainBranding.vue  PersonalInfo.vue
frontend/src/features/settings/security/components/: Devices.vue  InputPassword.vue  Password.vue  TwofactorAuth.vue
frontend/src/router/: index.ts
frontend/src/services/: DeviceInfoService.ts  LocationService.ts  apiService.ts  authService.ts  shortlinkService.ts
frontend/src/stores/: auth.ts  dashboardStore.ts
frontend/src/types/: api.ts  auth.ts  shortlink.ts
frontend/src/views/: Analytics.vue  Dashboard.vue  Home.vue  Login.vue  OAuthCallback.vue  SettingsLayout.vue  Signup.vue
frontend/src/views/Settings/: API&Integrations.vue  API_Integrations.vue  BillingPlans.vue  Preferences.vue  Profile.vue  Security.vue
