[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = {version = '1', features = ['full']}
axum = {version = "0.8", features = ['macros']}
serde = {version = '1', features = ['derive']}
serde_json = "1"
tower-http = {version = "0.6", features=['cors']}

sqlx = {version = "0.8", features=['runtime-tokio-rustls', 'postgres', 'uuid', 'chrono', 'macros']}

chrono = {version = "0.4", features = ['serde']}
dotenvy = "0.15"

bcrypt = "0.19"
jsonwebtoken = {version ='10', features = ["rust_crypto"]}
