[package]
name = "axum-utoipa"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio        = { version = "1",    features = ["full"] }
axum         = { version = "0.8",  features = ["macros"] }
serde        = { version = "1",    features = ["derive"] }
serde_json   = "1"
tower-http   = { version = "0.6",  features = ["cors"] }
sqlx         = { version = "0.8",  features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "macros"] }
chrono       = { version = "0.4",  features = ["serde"] }
dotenvy      = "0.15"
bcrypt       = "0.15"
jsonwebtoken = { version = "9",    features = [] }
utoipa       = { version = "5.4",  features = ["axum_extras", "chrono", "uuid"] }
utoipa-swagger-ui = { version = "9", features = ["axum"] }
uuid         = { version = "1",    features = ["v4", "serde"] }
thiserror    = "2"
tracing      = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
